--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "@date-io/date-fns": "^2.11.0",
+    "@date-io/moment": "1.x",
+    "@material-ui/core": "^4.12.2",
+    "@material-ui/pickers": "^3.3.10",
     "material-ui-thai-datepickers": "1.1.7",
+    "moment": "^2.29.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-dropdown": "1.9.2",
+    "react-dropdown": "^1.9.2",
     "react-icons": "4.2.0",
     "react-particles-js": "3.5.3",
     "react-router-dom": "5.2.0",
     "react-scripts": "^4.0.3",
+    "react-select": "^4.3.1",
     "tsparticles": "1.32.0"
   },
   "devDependencies": {
