--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "17.0.2",
     "react-dropdown": "^1.9.2",
     "react-icons": "4.2.0",
+    "react-moment": "^1.1.1",
     "react-particles-js": "3.5.3",
     "react-router-dom": "5.2.0",
     "react-scripts": "^4.0.3",
